# opengl-camera2

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FaceTracker.cpp  FaceTracker.h  native-lib.cpp
app/src/main/java/com/example/openglfilter/: AbstractFboFilter.java  AbstractFilter.java  BeautyFilter.java  BigEyeFilter.java  CameraFilter.java  CameraHelper.java  CameraRender.java  CameraView.java  ColorFilter.java  EGLEnv.java  FileUtils.java  MainActivity.java  MediaRecorder.java  MediaRecorder1.java  OpenGLUtils.java  RecordFilter.java  ScreenFilter.java  SoulFilter.java  SplitFilter.java  StickerFilter.java
app/src/main/java/com/example/openglfilter/face/: Face.java  FaceTracker.java
app/src/main/java/com/example/openglfilter/util/: Camera2Helper.java  CommonUtil.java  ImageUtil.java  OpenGlUtils.java
app/src/main/java/com/example/openglfilter/widget/: RecordButton.java
app/src/main/java/com/maniu/openglfilter/: AbstractFilter.java  CameraRender.java  CameraView.java  EGLEnv.java  MainActivity.java  MediaRecorder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: base_frag.frag  camera_frag.frag  camera_frag5.glsl
gradle/wrapper/: gradle-wrapper.properties
